--- a/src/app/admin/cibil-reports/cibil-reports.component.html
+++ b/src/app/admin/cibil-reports/cibil-reports.component.html
@@ -9,7 +9,7 @@
           <img src="../../../assets/images/icons/left-arrow.svg" alt="Back" />
         </span>
         <b>
-          <span class="back-btn-text">Accounts </span>
+          <span class="back-btn-text">Cibil Reports </span>
         </b>
       </div>
       <div class="col-md-3 text-end">
@@ -48,7 +48,7 @@
         'status'
       ]"
       styleClass="p-datatable-customers "
-      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Accounts"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Cibil Reports"
     >
       <ng-template pTemplate="caption">
         <div class="row">
