--- a/src/app/admin/social-media-leads/social-media-leads.component.html
+++ b/src/app/admin/social-media-leads/social-media-leads.component.html
@@ -85,7 +85,7 @@
         'CreatedOn'
       ]"
       styleClass="p-datatable-customers "
-      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Leads"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Social Media Leads"
     >
       <ng-template pTemplate="header" let-columns>
         <tr>
