--- a/src/app/admin/subscribers/subscribers.component.html
+++ b/src/app/admin/subscribers/subscribers.component.html
@@ -39,7 +39,7 @@
         'status'
       ]"
       styleClass="p-datatable-customers "
-      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Accounts"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Subscibers"
     >
       <ng-template pTemplate="caption">
         <div class="row">
