--- a/src/app/admin/cam-reports/cam-reports.component.html
+++ b/src/app/admin/cam-reports/cam-reports.component.html
@@ -54,6 +54,7 @@
         [rowsPerPageOptions]="[10, 20, 50]"
         [responsive]="true"
         styleClass="p-datatable-striped"
+        [showCurrentPageReport]="true"
         [globalFilterFields]="[
           'reportId',
           'reportName',
@@ -61,6 +62,7 @@
           'reportStatus'
         ]"
         #dt
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} BSA Reports"
       >
         <ng-template pTemplate="caption">
           <div class="d-flex justify-content-between align-items-center">
