--- a/src/app/admin/subscription-plans/subscription-plans.component.html
+++ b/src/app/admin/subscription-plans/subscription-plans.component.html
@@ -49,7 +49,7 @@
         'status'
       ]"
       styleClass="p-datatable-customers "
-      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Accounts"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Subscription Plans"
     >
       <ng-template pTemplate="caption">
         <div class="row">
