--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -265,7 +265,7 @@
                     <th>Business Name</th>
                     <th>Person Name</th>
                     <th>Mobile</th>
-                    <th>Email</th>
+                    <th>Message</th>
                   </tr>
                 </ng-template>
 
@@ -274,7 +274,7 @@
                     <td>{{ contact.company_name || '-' }}</td>
                     <td>{{ contact.full_name || '-' }}</td>
                     <td>{{ contact.phone || '-' }}</td>
-                    <td>{{ contact.email || '-' }}</td>
+                    <td>{{ contact.message || '-' }}</td>
                   </tr>
                 </ng-template>
 
