--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -10,6 +10,17 @@
       </h5>
     </div>
   </div>
+  <div class="d-flex justify-content-end mb-2">
+    <p-dropdown
+      [options]="selectedtableoptions"
+      [(ngModel)]="selectedTodayTable"
+      placeholder="Select Table"
+      optionLabel="label"
+      optionValue="value"
+      styleClass="w-15rem"
+    ></p-dropdown>
+  </div>
+
 </div>
 
 <div *ngIf="loading">
@@ -51,7 +62,7 @@
         </ng-container>
       </div>
 
-      <div class="row  mt-2">
+      <div class="row  mt-2" >
         <div class="col-md-6 no-padding-small">
           <br class="d-lg-none d-md-none" />
           <!--Today FallowUp date-->
@@ -72,7 +83,7 @@
                 [paginator]="true"
                 [rows]="10"
                 class="p-datatable-striped"
-                [loading]="apiLoading"
+                [loading]="fallowupLoading"
                 scrollHeight="240px"
                 styleClass="p-datatable-customers "
                 responsiveLayout="scroll"
@@ -142,7 +153,7 @@
           </div>
         </div>
         <!--Accounts Table-->
-        <div class="col-md-6 no-padding-small">
+        <div class="col-md-6 no-padding-small" *ngIf="selectedTodayTable === 'accounts'">
           <br class="d-lg-none d-md-none" />
           <div class="card">
             <div class="text-capitalize" style="height: 420px">
@@ -231,10 +242,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row mt-2">
-        <!-- Today Contacts Table -->
-        <div class="col-md-6 no-padding-small mt-3">
+        <!--Contacts Table-->
+         <div class="col-md-6 no-padding-small "  *ngIf="selectedTodayTable === 'contacts'">
           <div class="card">
             <div class="text-capitalize" style="height: 420px">
               <p-table
@@ -302,8 +311,8 @@
             </div>
           </div>
         </div>
-        <!-- Today Subscribers Table -->
-        <div class="col-md-6 no-padding-small mt-3">
+        <!--Subscribers Table-->
+        <div class="col-md-6 no-padding-small " *ngIf="selectedTodayTable === 'subscribers'">
           <div class="card">
             <div class="text-capitalize" style="height: 420px">
               <p-table
@@ -372,6 +381,134 @@
           </div>
         </div>
       </div>
+      <!-- <div class="row mt-2">
+
+        <div class="col-md-6 no-padding-small mt-3"  *ngIf="selectedTodayTable === 'contacts'">
+          <div class="card">
+            <div class="text-capitalize" style="height: 420px">
+              <p-table
+                [value]="todayContacts"
+                [lazy]="true"
+                [totalRecords]="todayContactsCount"
+                (onLazyLoad)="onLazyLoadTodayContacts($event)"
+                dataKey="id"
+                [paginator]="true"
+                [rows]="10"
+                [loading]="apiLoading"
+                scrollHeight="240px"
+                [showCurrentPageReport]="false"
+                [rowsPerPageOptions]="[10, 25, 50]"
+                class="p-datatable-striped"
+                responsiveLayout="scroll"
+                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Contacts"
+                [showCurrentPageReport]="true"
+              >
+                <ng-template pTemplate="caption">
+                  <div class="d-flex justify-content-between">
+                    <div>Today Contacts</div>
+                  </div>
+                </ng-template>
+
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>Business Name</th>
+                    <th>Person Name</th>
+                    <th>Mobile</th>
+                    <th>Message</th>
+                  </tr>
+                </ng-template>
+
+                <ng-template pTemplate="body" let-contact>
+                  <tr>
+                    <td>{{ contact.company_name || '-' }}</td>
+                    <td>{{ contact.full_name || '-' }}</td>
+                    <td>{{ contact.phone || '-' }}</td>
+                    <td>{{ contact.message || '-' }}</td>
+                  </tr>
+                </ng-template>
+                 <ng-template pTemplate="emptymessage">
+                  <tr class="text-center">
+                    <td colspan="10" class="text-center fw-bold">
+                      <p
+                        style="
+                          color: #535ab4;
+                          font-weight: 400;
+                          font-size: 18px;
+                        "
+                      >
+                        No Data Found
+                      </p>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 no-padding-small mt-3" *ngIf="selectedTodayTable === 'subscribers'">
+          <div class="card">
+            <div class="text-capitalize" style="height: 420px">
+              <p-table
+                [value]="todaySubscribers"
+                [lazy]="true"
+                (onLazyLoad)="onLazyLoadTodaySubscribers($event)"
+                dataKey="id"
+                [paginator]="true"
+                [rows]="10"
+                [totalRecords]="todaySubscribersCount"
+                [loading]="apiLoading"
+                [showCurrentPageReport]="false"
+                [rowsPerPageOptions]="[10, 25, 50]"
+                scrollHeight="240px"
+                class="p-datatable-striped"
+                responsiveLayout="scroll"
+                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Subscribers"
+                [showCurrentPageReport]="true"
+              >
+                <ng-template pTemplate="caption">
+                  <div class="d-flex justify-content-between">
+                    <div>Today Subscribers</div>
+                  </div>
+                </ng-template>
+
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>Id</th>
+                    <th>Email</th>
+                    <th>Subscribed On</th>
+                  </tr>
+                </ng-template>
+
+                <ng-template pTemplate="body" let-subscriber>
+                  <tr>
+                    <td>{{ subscriber.id || '-' }}</td>
+                    <td>{{ subscriber.email || '-' }}</td>
+                    <td>
+                      {{ subscriber.subscribed_on ? (subscriber.subscribed_on | date) : '-' }}
+                    </td>
+                  </tr>
+                </ng-template>
+                 <ng-template pTemplate="emptymessage">
+                  <tr class="text-center">
+                    <td colspan="10" class="text-center fw-bold">
+                      <p
+                        style="
+                          color: #535ab4;
+                          font-weight: 400;
+                          font-size: 18px;
+                        "
+                      >
+                        No Data Found
+                      </p>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+          </div>
+        </div>
+      </div> -->
     </div>
 
     <footer class="footer-card text-center text-lg-start mx-2 my-4">
